# DFTBaby

./: .gitignore  BUILD_VERIFICATION.md  PYTHON3_MIGRATION.md  README.md  README.txt  mkdocs.yml  pyproject.toml  requirements-colab.txt  requirements-core.txt  setup.py
.github/workflows/: docs.yml
DFTB/: AtomicData.py  BasisSets.py  CPKS.py  ConvAcceleration.py  DFTB2.py  DensityFitting.py  DiskMemory.py  ExcGradients.py  GammaApproximation.py  ImplicitSolvent.py  LR_TDDFTB.py  LongRangeCT.py  Molden.py  Mulliken.py  NACsApprox.py  NACsMO.py  NEB.py  NTOs.py  OrbitalLocalization.py  PES.py  Parallization.py  Parameters.py  Periodic.py  QMMM.py  SKMatrixElements.py  ScalarCoupling.py  Solver.py  SphericalHarmonics.py  StabilityAnalysis.py  Symmetry.py  Thermochemistry.py  Timer.py  XYZ.py  cli.py  optimize.py  optimize_meci.py  optimize_neb.py  optimize_neb_g09.py  optparse.py  scan.py  (+1 more)
DFTB/Analyse/: Cube.py  MolecularGraph.py  SymmetryAssignment.py  absorption_spectrum.py  add_columns.py  analyse_IVR.py  analyse_transition_densities.py  average_fragment_data.py  bond_indeces.py  fcclasses_input.py  integrate_cube_Tn.py  ph_correlation.py  plot_ph_charges_planar.py  porphene_wire_shifts.py
DFTB/Analyse/blender/: animatecube.py  in2blender.py  xyz2blender.py
DFTB/Analyse/mayavi/: CubeViewerWidget.py  GUI.py
DFTB/Analyse/vmd/: vmd_cube_browser.py
DFTB/Dynamics/: GaussianWavepacket.py  HarmonicApproximation.py  SurfaceHopping.py  check_initial_distribution.py  dftbaby_handler.py  initial_conditions.py  random_velocities.py
DFTB/Dynamics/Analyse/: classify_isomers.py  energy_trajectory.py  fragments.py  lambda2_average.py  populations.py
DFTB/Dynamics/Analyse/Viewer/: trajViewer.py  trajViewer2.py
DFTB/Dynamics/Analyse/vmd/: vmd_input.py
DFTB/ForceField/: PeriodicForceField.py  assign_atom_types.py  copy_atom_types.py  copy_transition_charges.py  enlarge_unitcell.py  ff_optimize.py  ff_spectra.py  fit_electric_charges.py  fit_magnetic_dipoles.py
DFTB/ForceField/src/: Makefile  setup.py
DFTB/Formats/: DynamicsOut.py  Tinker.py  Turbomole.py  pc_t2x.py  sample_trajectory.py  xyz2gen.py
DFTB/Formats/Gaussian2py/: Checkpoint.py  Gaussian.py  WignerEnsemble.py
DFTB/Mathematica_scripts/: equations_of_motion_RPA.py
DFTB/MetaDynamics/: meta.py  mulliken.py  reconstruct.py
DFTB/Modeling/: BondOrders.py  CarbonNanotubes.py  MinimalEnclosingBox.py  MolecularCoords.py  OrbitalRotations.py  Puckering.py  analyse_pyrene_dimer.py  assign_partial_charges.py  average_pyrene_displacements.py  build_water_cluster.py  convert_xyz.py  cut_sphere.py  dupliverts.py  filter_fragments.py  interpolate_linearly.py  modify_internal.py  nanotube_builder.py  polyomino_random_growth.py  polyominos_reactivity.py  porphyrin_flakes.py  pprint_xyz.py  show_molcoords.py  split_xyz.py  thomson.py  thomson2.py
DFTB/MolecularIntegrals/: BasissetFreeDFT.py  ContinuumLCAO.py  ContinuumLCAO_ee.py  ERIs.py  FVVM.py  FiniteDifferences.py  Ints1e.py  LebedevQuadrature.py  MulticenterIntegration.py  NACs.py  NumericalGammaApproximation.py  OnSiteIntegrals.py  associatedLegendrePolynomials.py  becke_dft.py  chebyshev.py  fchkfile.py  gtobasis.py  hmi_continuum.py  hmi_variational_kohn.py  integrals.py  lithium_cation_continuum.py
DFTB/MolecularIntegrals/test/: test_asymptotic_vxc.py  test_leeuwen_baerends_exchange.py  test_settings.py
DFTB/MultipleScattering/: MoldenFile.py  MuffinTin.py  PAD.py  electroSka.py
DFTB/MultipleScattering/src/: Makefile
DFTB/Optimize/: GeometryOptimization.py  InternalCoords.py  Optimize.py
DFTB/Poisson/: electrostatic_potential.py  poisson_test.py  vector_potential.py
DFTB/Poisson/src/: Makefile
DFTB/RepulsivePotential/: FitForces.py  FitReppots.py  Gaussian.py  RepulsivePotential.py  convert_reppotfile.py  create_dimer_trajectory.py  dftb_forces_trajectory.py  force_trajectory.py  gaussian_forces_trajectory.py  perturb_geometry.py  plot_reppotfile.py  scale_geometry.py
DFTB/SlaterKoster/: PolarTwoCenterGrid.py  PseudoAtomDFT.py  RadialPotential.py  SKIntegrals.py  fit_densities.py  generate_free_pseudoatoms.py  generate_ptcgrid.py  generate_slakotables.py  hotbit_format.py  plot_gamma_integrals.py  plot_pseudoatoms.py  plot_slakofile.py
DFTB/SlaterKoster/confined_pseudo_atoms/: __init__.py
DFTB/SlaterKoster/free_pseudo_atoms/: __init__.py
DFTB/extensions/: Makefile  Makefile.conda
doc/source/: compilation.rst  compilation_fixes.rst  conf.py  examples.rst  index.rst  introduction.rst  parametrization.rst  usage_guide.rst
docs/: configuration.md  examples.md  index.md  installation.md  troubleshooting.md  tutorials.md  usage.md
tests/: test_compilation.py  test_package_build.py  test_python3_compatibility.py  test_syntax_validation.py
