[build-system]
requires = [
    "setuptools>=65.0",
    "wheel>=0.40",
    "numpy>=1.26.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "DFTBaby"
version = "0.1.0"
description = "Tight binding density functional theory for excited states"
readme = "README.md"
license = {text = "See LICENSE file"}
authors = [
    {name = "Alexander Humeniuk", email = "alexander.humeniuk@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Fortran",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.26.4,<3",
    "scipy>=1.11.4",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.7.0",
]
metadynamics = [
    "matplotlib>=3.7.0",
    "sympy>=1.12",
]
advanced = [
    "mpmath>=1.3.0",
]
gui = [
    "matplotlib>=3.7.0",
    "mayavi>=4.8.0",
]
full = [
    "matplotlib>=3.7.0",
    "sympy>=1.12",
    "mpmath>=1.3.0",
    "mayavi>=4.8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
docs = [
    "mkdocs>=1.6.0",
]
build = [
    # Fortran extension compilation requirements
    # Note: gfortran must be installed separately via system package manager
    "numpy>=1.26.4,<3",
]

[project.scripts]
"DFTB2.py" = "DFTB.cli:dispatch"
"LR_TDDFTB.py" = "DFTB.cli:dispatch"
"optimize.py" = "DFTB.cli:dispatch"
"optimize_neb.py" = "DFTB.cli:dispatch"
"optimize_meci.py" = "DFTB.cli:dispatch"
"scan.py" = "DFTB.cli:dispatch"
"split_xyz.py" = "DFTB.cli:dispatch"
"show_molcoords.py" = "DFTB.cli:dispatch"
"modify_internal.py" = "DFTB.cli:dispatch"
"cut_sphere.py" = "DFTB.cli:dispatch"
"convert_xyz.py" = "DFTB.cli:dispatch"
"nanotube_builder.py" = "DFTB.cli:dispatch"
"filter_fragments.py" = "DFTB.cli:dispatch"
"check_initial_distribution.py" = "DFTB.cli:dispatch"
"random_velocities.py" = "DFTB.cli:dispatch"
"initial_conditions.py" = "DFTB.cli:dispatch"
"absorption_spectrum.py" = "DFTB.cli:dispatch"
"ph_correlation.py" = "DFTB.cli:dispatch"
"SurfaceHopping.py" = "DFTB.cli:dispatch"
"populations.py" = "DFTB.cli:dispatch"
"trajViewer2.py" = "DFTB.cli:dispatch"
"reconstruct.py" = "DFTB.cli:dispatch"
"GeometryOptimization.py" = "DFTB.cli:dispatch"
"assign_atom_types.py" = "DFTB.cli:dispatch"
"copy_atom_types.py" = "DFTB.cli:dispatch"
"ff_optimize.py" = "DFTB.cli:dispatch"
"fit_electric_charges.py" = "DFTB.cli:dispatch"
"fit_magnetic_dipoles.py" = "DFTB.cli:dispatch"
"electrostatic_potential.py" = "DFTB.cli:dispatch"
"vector_potential.py" = "DFTB.cli:dispatch"
"electroSka.py" = "DFTB.cli:dispatch"

[project.urls]
Repository = "https://github.com/kangmg/DFTBaby"
Documentation = "https://kangmg.github.io/DFTBaby/"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["DFTB*"]

[tool.setuptools.package-data]
DFTB = ["dftbaby.cfg"]
"DFTB.Dynamics.Analyse.Viewer" = ["*.ui"]
"DFTB.RepulsivePotential.reppot_tables" = ["*"]
"DFTB.SlaterKoster.slako_tables" = ["*"]
"DFTB.SlaterKoster.confined_pseudo_atoms" = ["*"]
"DFTB.SlaterKoster.free_pseudo_atoms" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
